--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="col-md-4">
     <div>
-      <%= form_for [:admin, @category], class: "form form-inline" do |f| %>
+      <%= form_for [:admin, @category], remote: true, class: "form form-inline" do |f| %>
         <%= render "shared/error_messages", object: f.object %>
         <div class="form-group">
           <%= f.label :name %>
