--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,11 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">      
         <% if logged_in? %>
+          <% if current_user.admin? %>
+            <li><%= link_to t("manage_user"), admin_users_path %></li>
+            <li><%= link_to t("manage_category"), admin_categories_path %></li>
+            <li><%= link_to t("manage_word"), admin_words_path %></li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t "header.account" %> <b class="caret"></b>
